tests/parser_cases/invalid/bad_string_literal.ob0
(* INVALID: string literal is not terminated *)
MODULE Main;
BEGIN
  WriteString("Hello)
END Main.
